# nupe

./: .gitignore  Cargo.toml  Justfile  README.md  rustfmt.toml
docs/: design.md  layout.md  style.md
src/: builder.rs  dos.rs  error.rs  exec.rs  internal.rs  lib.rs  pe.rs  raw.rs  rich.rs  section.rs
src/pe/: builder.rs
src/raw/: coff.rs  dos.rs  exec.rs  pe.rs  rich.rs
tests/data/: README.md
tests/data/tinyPE/: LICENSE  notes.txt  nothing.asm
