[package]
name = "nupe"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "reserved"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"

[features]
default = ["std"]
std = []

[dev-dependencies]
anyhow = "1.0.66"
static_assertions = "1.1.0"
