[package]
name = "nupe"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "reserved"

[dependencies]
bitflags = "2.1.0"
bstr = { version = "1.4.0", default-features = false }

[features]
default = ["std"]
std = []

[dev-dependencies]
anyhow = "1.0.70"
bolero = "0.9.0"
insta = "1.29.0"
static_assertions = "1.1.0"

[[bin]]
name = "dbg"
# Required so afl works
test = false
